--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -8,7 +8,7 @@ version: '2'
 services:
 
   webtrees:
-    image:  lomadi/webtrees:latest
+    image:  cutyno/webtrees:latest
     container_name:  webtrees
     links:
       - webtrees-database:webtrees-database
@@ -42,4 +42,3 @@ services:
     volumes:
       - §§FOLDER/webtrees/var/lib/mysql:/var/lib/mysql
       - §§FOLDER/webtrees/var/www/html/webtrees/data:/var/www/html/webtrees/data
-      
