--- a/images/database/Dockerfile
+++ b/images/database/Dockerfile
@@ -1,4 +1,6 @@
-# See https://github.com/cutyno/app-webtrees/tree/master/images/webtrees
+#setting mysql version
+ARG MYSQL_VERSION=5.7
+FROM mysql:$MYSQL_VERSION
 
-FROM mysql:5.6
+#set basis sql dump
 ADD dump.sql /docker-entrypoint-initdb.d/sample.sql
