--- a/images/webtrees/Dockerfile
+++ b/images/webtrees/Dockerfile
@@ -1,15 +1,15 @@
-#setting versions
+#setting php version
 ARG PHP_VERSION=7.3.8
+LABEL version.php=$PHP_VERSION
 
 #getting base image
 FROM php:$PHP_VERSION-apache
 
-ARG PHP_VERSION=7.3.8
+#setting webtrees version
 ARG WEBTREES_VERSION=1.7.14
 #setting lable
 LABEL creator="lomadi@mac.com"
 LABEL maintainer="webmaster@f-quadrat.com"
-LABEL version.php=$PHP_VERSION
 LABEL version.webtrees=$WEBTREES_VERSION
 
 #fix installations and add source 
